--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -5,9 +5,9 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item ">
+        <!-- <li class="nav-item ">
           <a class="nav-link" [routerLink]="['/']">Home <span class="sr-only">(current)</span></a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/products-list/']">Product List</a>
         </li>
