--- a/public/src/app/edit-product/edit-product.component.html
+++ b/public/src/app/edit-product/edit-product.component.html
@@ -1,49 +1,71 @@
 <div class="new">
-
   <div class="inline-blk blk1">
-    <h3> Edit Product </h3>
+    <h3> Add a review for {{selectedMovie.title}}</h3>
     <form  (submit)="onSubmit()">
+
       <br>
 
       <div class="form-group">
-        <!-- <div class="col-md-6 col-md-offset-3"> -->
-          <p class="errors" *ngIf="errors.title"> {{errors.title}}</p>
-          <label for="title">Title</label>
-          <input type="text" class="form-control" id="title" name="title" id="title" name="title" [(ngModel)]="editItem.title">
-        <!-- </div> -->
-      </div>
-
-      <!-- <p class="error" *ngIf="messages.quote"> {{messages.quote}}</p> -->
-      <br/>
-      <p class="errors" *ngIf="errors.price"> {{errors.price}}</p>
-
-      <div class="input-group">
-        <!-- <div class="input-group col-md-6 col-md-offset-3"> -->
-
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="price">$</span>
+         <p class="errors" *ngIf="errs.reviewer"> {{errs.reviewer}}</p>
+        <!--<div *ngIf="reviewer.invalid && (reviewer.dirty || reviewer.touched)">
+          <div *ngIf="reviewer.errors.required">
+            <p class="errors"> Name is required </p>
           </div>
-          <input type="text" class="form-control" id="label" name="price" [(ngModel)]="editItem.price">
+          <div *ngIf="reviewer.errors.minlength">
+            <p class="errors"> Name must be at least 3 characters long. </p>
+          </div>
+        </div> -->
+        <!-- <div class="col-md-6 col-md-offset-3"> -->
+          <label for="reviewer"> Your Name </label>
+          <input type="text" class="form-control" id="name" name="reviewer" minlength="3" maxlength="24" [(ngModel)]="newReview.reviewer" #reviewer="ngModel" required>
         <!-- </div> -->
       </div>
 
-      <!-- <p class="error" *ngIf="messages.quote"> {{messages.quote}}</p> -->
-      <br/>
+    <br/>
+
+      <p class="errors" *ngIf="errs.rating"> {{errs.rating}}</p>
+    <!--  <div *ngIf="rating.invalid && (rating.dirty || rating.touched)">
+        <div *ngIf="rating.errors.required">
+          <p class="errors"> Rating is required. </p>
+        </div>
+      </div> -->
 
       <div class="form-group">
-          <p class="errors" *ngIf="errors.url"> {{errors.url}}</p>
+        <label for="rating"> Ratings</label>
+        <select class="form-control" id="rating" name="rating" [(ngModel)]="newReview.rating" #rating="ngModel" required>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
+      </div>
 
-          <label for="url">Image URL</label>
-          <input type="text" class="form-control" id="url" name="url" [(ngModel)]="editItem.url">
+
+      <br/>
+        <p class="errors" *ngIf="errs.comment"> {{errs.comment}}</p>
+        <div *ngIf="comment.invalid && (comment.dirty || comment.touched)">
+          <div *ngIf="comment.errors.required">
+            <p class="errors"> Review is required </p>
+          </div>
+          <div *ngIf="comment.errors.minlength">
+            <p class="errors"> Review must be at least 3 characters long. </p>
+          </div>
+        </div>
+      <div class="form-group">
+          <!-- <p class="error" *ngIf="errs.comment"> {{errs.url}}</p> -->
+          <label for="comment">Your Review</label>
+          <textarea class="form-control" id="comment" rows="3" name="comment" minlength="3" [(ngModel)]="newReview.comment" #comment="ngModel" required> </textarea>
       </div>
       <br/>
-      <button type="submit" class="btn btn-primary mb-2"> Save</button>
+
+
+      <!-- <span *ngIf="!reviewer.invalid && !rating.invalid && !comment.invalid"> -->
+        <button type="submit" class="btn btn-primary mb-2"> Submit </button>
+      <!-- </span> -->
+
       <a [routerLink] = "['/products-list']" class="btn btn-primary mb-2" > Cancel </a>
+
     </form>
   </div>
-
-  <div class="inline-blk">
-    <img src="{{editItem.url}}" alt="Smiley face" height="42" width="42">
-  </div>
-
 </div>
