--- a/public/src/app/new-product/new-product.component.css
+++ b/public/src/app/new-product/new-product.component.css
@@ -1,30 +1,8 @@
 .new{
-  margin-left: 5em;
+  margin : 5em;
+  padding: 2em;
 }
-.btn{
-  margin-left: 2em;
-}
-
-img {
-  width: 100%;
-  height: 100%;
-}
-
-.inline-blk{
-  display : inline-block;
-  width: 45%;
-  height: 500px;
-  background-color: lightgrey;
-  border: 3px solid blue;
-  margin-left: 1.2em;
-  vertical-align : top;
-}
-
-.blk1{
-  padding: 1.5em;
-}
-
-a{
+ .btn{
   margin-left: 2em;
 }
 
@@ -32,3 +10,13 @@ a{
   color : red;
   font-size: 0.75em;
 }
+
+/* .blk1{
+  padding: 1.5em;
+}
+
+a{
+  margin-left: 2em;
+}
+
+ */
