--- a/public/src/app/new-product/new-product.component.html
+++ b/public/src/app/new-product/new-product.component.html
@@ -1,7 +1,7 @@
 <div class="new">
 
   <div class="inline-blk blk1">
-    <h3> Create a New Product </h3>
+    <h3> Submit a movie and review </h3>
     <form  (submit)="onSubmit()">
 
       <br>
@@ -13,53 +13,80 @@
             <p class="errors"> Title is required </p>
           </div>
           <div *ngIf="title.errors.minlength">
-            <p class="errors"> Title must be at least 4 characters long. </p>
+            <p class="errors"> Title must be at least 3 characters long. </p>
           </div>
         </div>
         <!-- <div class="col-md-6 col-md-offset-3"> -->
-          <label for="title">Title</label>
-          <input type="text" class="form-control" id="title" name="title" minlength="3" maxlength="24" [(ngModel)]="newProduct.title" #title="ngModel" required>
+          <label for="title">Movie Title</label>
+          <input type="text" class="form-control" id="title" name="title" minlength="3" maxlength="24" [(ngModel)]="newMovie.title" #title="ngModel" required>
         <!-- </div> -->
       </div>
 
       <br/>
-      <p class="errors" *ngIf="errs.price"> {{errs.price}}</p>
-      <div *ngIf="price.invalid && (price.dirty || price.touched)">
-        <div *ngIf="price.errors.required">
-          <p class="errors"> Price is required. </p>
+
+      <div class="form-group">
+        <p class="errors" *ngIf="errs.reviewer"> {{errs.reviewer}}</p>
+        <div *ngIf="name.invalid && (name.dirty || name.touched)">
+          <div *ngIf="name.errors.required">
+            <p class="errors"> Name is required </p>
+          </div>
+          <div *ngIf="name.errors.minlength">
+            <p class="errors"> Name must be at least 3 characters long. </p>
+          </div>
+        </div>
+        <!-- <div class="col-md-6 col-md-offset-3"> -->
+          <label for="name"> Your Name </label>
+          <input type="text" class="form-control" id="name" name="name" minlength="3" maxlength="24" [(ngModel)]="newMovie.name" #name="ngModel" required>
+        <!-- </div> -->
+      </div>
+
+    <br/>
+
+      <p class="errors" *ngIf="errs.rating"> {{errs.rating}}</p>
+      <div *ngIf="ratings.invalid && (ratings.dirty || ratings.touched)">
+        <div *ngIf="ratings.errors.required">
+          <p class="errors"> Rating is required. </p>
         </div>
       </div>
 
-      <div class="input-group">
-
-
-        <!-- <div class="input-group col-md-6 col-md-offset-3"> -->
-          <div class="input-group-prepend">
-            <span class="input-group-text" id="price">$</span>
-          </div>
-          <input type="text" class="form-control" id="price" name="price" [(ngModel)]="newProduct.price" #price="ngModel" required>
-        <!-- </div> -->
+      <div class="form-group">
+        <label for="ratings"> Ratings</label>
+        <select class="form-control" id="ratings" name="ratings" [(ngModel)]="newMovie.ratings" #ratings="ngModel" required>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
       </div>
+
 
       <!-- <p class="error" *ngIf="messages.quote"> {{messages.quote}}</p> -->
       <br/>
+        <div *ngIf="review.invalid && (review.dirty || review.touched)">
+          <div *ngIf="review.errors.required">
+            <p class="errors"> Review is required </p>
+          </div>
+          <div *ngIf="review.errors.minlength">
+            <p class="errors"> Review must be at least 3 characters long. </p>
+          </div>
+        </div>
       <div class="form-group">
-          <p class="error" *ngIf="errs.url"> {{errs.url}}</p>
-          <label for="url">Image URL</label>
-          <input type="text" class="form-control" id="url" name="url" [(ngModel)]="newProduct.url">
+          <p class="errors" *ngIf="errs.comment"> {{errs.comment}}</p>
+          <label for="review">Your Review</label>
+          <textarea class="form-control" id="review" rows="3" name="review" minlength="3" [(ngModel)]="newMovie.review" #review="ngModel" required> </textarea>
       </div>
       <br/>
-      <span *ngIf="!title.invalid && !price.invalid">
-        <button type="submit" class="btn btn-primary mb-2">Create</button>
-      </span>
+
+
+      <!-- <span *ngIf="!title.invalid && !review.invalid && !ratings.invalid && !name.invalid"> -->
+        <button type="submit" class="btn btn-primary mb-2"> Submit </button>
+      <!-- </span> -->
+      <!-- <button type="submit" class="btn btn-primary mb-2" disabled> Submit </button> -->
+
       <a [routerLink] = "['/products-list']" class="btn btn-primary mb-2" > Cancel </a>
 
     </form>
-  </div>
-
-  <div class="inline-blk ">
-
-    <img src="{{newProduct.url}}" alt="product-img" >
   </div>
 
 </div>
