--- a/public/src/app/product-home/product-home.component.css
+++ b/public/src/app/product-home/product-home.component.css
@@ -1,25 +1,5 @@
-.product{
-  height : 500px;
+.home{
+  margin-top: 2em;
   padding: 1em;
-}
-
-img{
-  width: 100%;
-  height: 60%;
-  border : 2px solid black;
-}
-
-a{
-  margin-left: 1em;
-}
-
-.row{
-
   text-align: center;
-}
-
-.col{
-  border : 2px solid red;
-  border-radius : 10px;
-  height: 500px;
 }
