--- a/public/src/app/products-list/products-list.component.html
+++ b/public/src/app/products-list/products-list.component.html
@@ -1,11 +1,6 @@
 <div class="jumbotron home">
-  <h2 class="jumbotron-heading"> All Products</h2>
+  <h2 class="jumbotron-heading"> SQUISHY TOMATOES</h2>
   <p> </p>
-  <p>
-    <a [routerLink] = "['new-product']" class="btn btn-primary my-2" > Create New Product </a>
-    <a [routerLink] = "['/']" class="btn btn-primary my-2" > Home Page </a>
-  </p>
-
 </div>
 
 <router-outlet></router-outlet>
